# vision_skill

./: .gitignore  README.md  conftest.py  pyproject.toml
docs/: AGENT_SKILL_DEVELOPMENT_GUIDE.md  DARWIN_RUBRIC_AND_FLOW_ADAPTATION_V1.md  EVAL_FLOW_BEFORE_AFTER_COMPARISON.md  EVAL_SYSTEM_REFACTOR_PLAN_V1.md  PROJECT.md  README.md  STRUCTURE_AND_FUNCTIONS.md  submission-ready-overview-v0.1.md
docs/code-guides/: 2026-04-08-vision-skill-code-understanding-guide-v0.1.md  README.md
docs/package-specs/: README.md  agent-host-adapter-contract-v0.1.md  capability-rubric-v0.1.md  deep-eval-framework-v0.1.md  eval-factory-contract-v0.1.md  package-contract-v0.1.md
docs/project-plans/: 2026-03-31-vision-skill-engineering-plan-v0.1.md  2026-03-31-vision-skill-plan-a-package-factory-v0.1.md  2026-04-08-vision-skill-mainline-a-system-overview-v0.1.md  2026-04-13-vision-skill-differential-eval-and-eval-factory-design-v0.1.md  2026-04-13-vision-skill-eval-effectiveness-suite-design-v0.1.md  2026-04-21-vision-skill-kimi-production-line-v0.1.md  README.md
eval-factory/: README.md
package-workspaces/: README.md
package-workspaces/golden-circle-workspace/: history.json
package-workspaces/mece-analysis-workspace/: history.json
package-workspaces/pyramid-principle-workspace/: history.json
package-workspaces/swot-analysis-workspace/: history.json
reports/: README.md
reports/audits/: README.md
shared/: README.md
toolchain/: README.md  common.py  kimi_command.py  kimi_runtime.py  kimi_workspace.py  run_eval_pipeline.py  run_kimi_production_cycle.py  run_level456.py
(+761 files in other folders)
