[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-skill"
version = "0.1.0"
description = "Local-first engineering pipeline for building, evaluating, and iterating Vision skills."
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["toolchain"]
python_files = ["test_*.py"]
addopts = "-q -p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["toolchain*"]
